# lazytesla

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
proto/google/protobuf/: timestamp.proto
src/: app.rs  config.rs  error.rs  help_menu.rs  lib.rs  main.rs  util.rs
src/api/: charge_limit.rs  client.rs  commands.rs  debug_curl.rs  details.rs  mod.rs  service.rs  temperature.rs  vehicles.rs
src/auth/: mod.rs  oauth.rs  partner.rs  server.rs  store.rs
src/store/: mod.rs  vehicles.rs
src/tui/: auth.rs  home.rs  mod.rs
src/vehicle_command/: charging.rs  client.rs  climate.rs  error.rs  fleet.rs  mod.rs  security.rs  session.rs  windows.rs
src/vehicle_command/crypto/: ecdh.rs  key.rs  metadata.rs  mod.rs  signer.rs
tests/: fleet_api.rs  proxy_tls_check.rs  vehicle_command.rs
