[package]
name = "lazytesla"
version = "0.1.0"
edition = "2024"
description = "Manage your Tesla from the terminal"
license = "MIT"

[lib]
name = "lazytesla"
path = "src/lib.rs"

[[bin]]
name = "lazytesla"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "5"
dotenvy = "0.15"
hmac = "0.12"
open = "5"
p256 = { version = "0.13", features = ["ecdh", "pem", "pkcs8"] }
prost = "0.13"
prost-types = "0.13"
rand = "0.8"
ratatui = "0.30.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
wiremock = "0.6"